# desktop_partner

./: .gitignore  PRD.md  README.md  TODO.md  docker-compose.yml  env.example  index.html  package.json  roadmap.md  start-services.ps1  techstack.md  vite.config.ts
docs/: API.md  DEPLOYMENT.md
scripts/: deploy.ps1  deploy.sh
services/agent/: Dockerfile  main.py  phi4_service.py  requirements.txt
services/lipsync/: Dockerfile  main.py  requirements.txt
services/memory/: Dockerfile  main.py  requirements.txt
src/: accessibility.ts  agent-manager.ts  ai-conversation.ts  avatar-customizer.ts  avatar-viewer.ts  camera-controller.ts  camera-ui.ts  emotion-chart.ts  emotion-history.ts  error-handler.ts  keyboard-shortcuts.ts  lazy-loader.ts  lipsync-manager.ts  main.ts  memory-cache.ts  memory-manager.ts  performance-monitor.ts  performance-optimizer.ts  script.js  script.ts  style.css  tool-call-ui.ts  user-profile.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: setup.ts
tests/integration/: full-conversation.test.ts
tests/unit/: ai-conversation.test.ts  avatar-viewer.test.ts  sentiment-analysis.test.ts
tests/user/: user-scenarios.test.ts
